--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = firstcrawl.settings
+default = crawljobs.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = firstcrawl
+project = crawljobs
